# Voidfighter

./: CMakeLists.txt  CMakeSettings.json  EULA - READ ME.txt  README.md  highscores.txt
src/: background.c  background.h  common.h  defs.h  draw.c  draw.h  highscores.c  highscores.h  hud.c  hud.h  init.c  init.h  input.c  input.h  main.c  main.h  sound.c  sound.h  stage.c  stage.h  structs.h  text.c  text.h  title.c  title.h  util.c  util.h
